--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.7",
+    "browser-image-compression": "^2.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
