--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "react-tsparticles": "^2.12.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.19",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
